[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "loguru>=0.7.3",
    "proxystr>=2.1.3",
    "pydantic>=2.11.7",
    "pyotp>=2.9.0",
    "python-socks>=2.7.1",
    "setuptools>=80.9.0",
    "twikit>=2.3.3",
]
